Improve error handling in IConfigJsonTree + Add errors as a parameters to allow implementations to check them * Catch errors and display the original string * Fix issues with android compatibility + Add error checking to ConfigUnFavoriteTweet, ConfigFavoriteTweet, ConfigCreateRetweet, ConfigBookmarkCreate, ConfigBookmarkDelete